# CAIRN

./: .gitignore  .woodpecker.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENCE  LICENSE-COMMERCIAL.md  NOTICE  README.md  mkdocs.yml  pyproject.toml
aion_website/: datenschutz.html  impressum.html  index_v2_2.html
aion_website/blog/: .gitignore  feed.xml  index.html
aion_website/blog/aion-clinical-2-0-1-release/: index.html
aion_website/blog/aion-demo-plattform/: index.html
aion_website/blog/aion-fm4-release-2-0-4/: index.html
aion_website/blog/aion-skalierungsschicht/: index.html
aion_website/blog_aion_website/: .gitignore  README.md  build.py  requirements.txt
aion_website/blog_aion_website/_templates/: index.html  post.html
aion_website/blog_aion_website/cairn-fhir-r4-tutorial/: index.html
aion_website/blog_aion_website/mnt/user-data/outputs/blog/aion-clinical-2-0-1-release/: index.html
aion_website/blog_aion_website/posts/: 2026-04-20-cairn-fhir-r4-tutorial.md  2026-05-09-aion-skalierungsschicht.md  2026-05-12-aion-clinical-2-0-1-release.md  2026-05-25-aion-demo-plattform.md  2026-05-26-aion-fm4-release-2-0-4.md
cairn/: __init__.py
cairn/adapters/: __init__.py  csv_df.py  fhir_r4.py  hl7v2.py
cairn/analysis/: __init__.py  cohort.py  terminology.py  variance.py
cairn/api/: __init__.py  app.py
cairn/cli/: __init__.py  commands.py
cairn/core/: __init__.py  allen.py  event.py  homomorphism.py  type_dag.py
cairn/verification/: __init__.py  sild.py  z3_proofs.py
docs/: CODEBERG_SETUP.md
tests/: conftest.py
tests/integration/: test_sild.py
tests/property/: test_fm2_properties.py
tests/unit/: test_api.py  test_cli.py  test_core.py
tools/: zenodo_upload.py
