[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "cairn-clinical"
version = "1.0.4"
description = "FM-2 formal verification of CDR-to-FHIR mappings — Allen algebra, Z3 SMT proofs, SILD silent information loss detection."
readme = "README.md"
license = { file = "LICENCE" }
requires-python = ">=3.11"

authors = [
  { name = "Friedhelm Matten", email = "friedhelm.matten@iscad-it.de" },
]

keywords = [
  "fhir",
  "hl7",
  "openehr",
  "interoperability",
  "formal-verification",
  "allen-algebra",
  "clinical-informatics",
  "information-loss",
  "sild",
  "fm2",
  "cdr",
  "terminology-drift",
  "graph-homomorphism",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  # FM-2 Core
  "networkx>=3.2",            # Type DAG, graph homomorphism        | BSD-3-Clause
  "z3-solver>=4.12",          # SMT formal verification              | MIT

  # Data models
  "pydantic>=2.5",            # Schema validation, mapping rulesets  | MIT
  "pandas>=2.1",              # DataFrame adapter, cohort analysis   | BSD-3-Clause
  "openpyxl>=3.1",            # Excel reporting                      | MIT

  # Healthcare standards
  "fhir.resources>=7.1",      # FHIR R4 resource parsing             | BSD-3-Clause
  "hl7>=0.4",                 # HL7 v2 message parsing               | BSD-3-Clause

  # API & CLI
  "fastapi>=0.110",           # REST API                             | MIT
  "uvicorn[standard]>=0.27",  # ASGI server                          | BSD-3-Clause
  "click>=8.1",               # Command-line interface               | BSD-3-Clause

  # Utilities
  "pyyaml>=6.0",              # YAML mapping ruleset configuration   | MIT
  "jinja2>=3.1",              # HTML/SVG report generation           | BSD-3-Clause
  "httpx>=0.27",              # Async HTTP client                    | BSD-3-Clause
]


[project.optional-dependencies]
dev = [
  "pytest>=8.0",              # Testing framework                    | MIT
  "pytest-cov>=5.0",          # Coverage reporting                   | MIT
  "hypothesis>=6.100",        # Property-based testing               | MPL-2.0
  "mypy>=1.9",                # Static type checking                 | MIT
  "ruff>=0.4",                # Linting and formatting               | MIT
]

docs = [
  "mkdocs>=1.5",              # Documentation framework              | BSD-2-Clause
  "mkdocs-material>=9.5",     # Material theme                       | MIT
  "jupyter>=1.0",             # Reference notebooks                  | BSD-3-Clause
]


[project.scripts]
cairn     = "cairn.cli:main"
cairn-api = "cairn.api:serve"


[project.urls]
Homepage      = "https://github.com/fmatten/CAIRN"
Repository    = "https://github.com/fmatten/CAIRN"
Issues        = "https://github.com/fmatten/CAIRN/issues"
Changelog     = "https://github.com/fmatten/CAIRN/blob/master/CHANGELOG.md"
Documentation = "https://github.com/fmatten/CAIRN#readme"
Mirror        = "https://codeberg.org/iscad/cairn"


[tool.hatch.build.targets.wheel]
packages = ["cairn"]


[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "--cov=cairn --cov-report=term-missing --cov-report=xml"


[tool.mypy]
python_version         = "3.11"
strict                 = true
warn_return_any        = true
warn_unused_configs    = true
disallow_untyped_defs  = true


[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]


[tool.coverage.run]
source   = ["cairn"]
branch   = true

[tool.coverage.report]
fail_under = 50
show_missing = true
